--- a/nailgun/static/index.html
+++ b/nailgun/static/index.html
@@ -13,7 +13,7 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <script data-main="/static/js/main" src="/static/js/libs/require.js"></script>
+    <script data-main="/static/js/main" src="/static/js/lib/bower/requirejs/require.js"></script>
   </head>
 
   <body>
