LESS play for navigation bar
Change-Id: I97e012ef3a3f5a6bbbeb8bb425d819ce85b82f87

--- a/nailgun/static/index.html
+++ b/nailgun/static/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
     <link href="/static/css/main.css" rel="stylesheet">
+    <link rel="stylesheet/less" type="text/css" href="/static/less/styles.less" />
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
