LESS play for navigation bar
Change-Id: I97e012ef3a3f5a6bbbeb8bb425d819ce85b82f87

--- a/nailgun/static/index.html
+++ b/nailgun/static/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
+    <link href="/static/css/less.css" rel="stylesheet">
     <link href="/static/css/main.css" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
