--- a/nailgun/static/index.html
+++ b/nailgun/static/index.html
@@ -19,7 +19,7 @@
     <div id="wrap">
       <div class="container">
         <div id="content">
-          <div class="loading"></div>
+          <div class="loading">{% if use_less %}Loading...{% endif %}</div>
         </div>
         <div id="push"></div>
       </div>
